# srsRAN_matlab

./: .gitignore  COPYRIGHT  CompatibilityTable.md  LICENSE  README.md  runSRSGNBUnittest.m  runSRSRANUnittest.m  runTestVector.m  srsCSIRSUnittest.m  srsChEqualizerUnittest.m  srsChEstimatorUnittest.m  srsDFTProcessorUnittest.m  srsDFTprocessorUnittest.m  srsDLProcessor.m  srsDLProcessorUnittest.m  srsDemodulationMapperUnittest.m  srsLDPCEncoderUnittest.m  srsLDPCRateMatcherUnittest.m  srsLDPCSegmenterUnittest.m  srsLDPCsegmenterUnittest.m  srsLowPAPRSequenceUnittest.m  srsModulationMapperUnittest.m  srsNZPCSIRSGeneratorUnittest.m  srsOFDMDemodulatorUnittest.m  srsOFDMModulatorUnittest.m  srsOFDMdemodulatorUnittest.m  srsOFDMmodulatorUnittest.m  srsOFHCompressionUnittest.m  srsPBCHEncoderUnittest.m  srsPBCHModulatorUnittest.m  srsPBCHdmrsUnittest.m  srsPDCCHCandidatesCommonUnittest.m  srsPDCCHCandidatesUeUnittest.m  srsPDCCHEncoderUnittest.m  srsPDCCHModulatorUnittest.m  srsPDCCHProcessorUnittest.m  srsPDCCHdmrsUnittest.m  srsPDCCHmodulatorUnittest.m  srsPDSCHEncoderUnittest.m  srsPDSCHModulatorUnittest.m  (+35 more)
+srsLib/+ofh/+compression/: srsCompressor.m  srsDecompressor.m
+srsLib/+phy/+helpers/: srsCSIRS2ReservedCell.m  srsCSIRSGetNofFreqRefs.m  srsCSIRSValidateConfig.m  srsConfigureCORESET.m  srsConfigureCSIRS.m  srsConfigureCarrier.m  srsConfigureDLSCHEncoder.m  srsConfigurePDCCH.m  srsConfigurePDSCH.m  srsConfigurePDSCHdmrs.m  srsConfigurePRACH.m  srsConfigurePUCCH.m  (+17 more)
+srsMEX/+phy/: srsPUSCHCapabilitiesMEX.m
+srsMEX/source/: .clang-format  .clang-tidy  CMakeLists.txt
+srsMEX/source/cmake/modules/: FindSRSRAN.cmake
+srsMEX/source/docs/: CMakeLists.txt  doxygen-awesome.css  main.dox  math_macros.tex
+srsMEX/source/include/srsran_matlab/: srsran_mex_dispatcher.h
+srsMEX/source/include/srsran_matlab/support/: factory_functions.h  matlab_to_srs.h  memento.h  resource_grid.h  to_span.h
+srsMEX/source/lib/: CMakeLists.txt
+srsMEX/source/lib/phy/: CMakeLists.txt
+srsMEX/source/lib/phy/upper/: CMakeLists.txt
+srsMEX/source/lib/phy/upper/channel_processors/: CMakeLists.txt  prach_detector_mex.cpp  prach_detector_mex.h  pucch_detector_mex.cpp  pucch_detector_mex.h  pucch_processor_mex.cpp  pucch_processor_mex.h  pusch_decoder_mex.cpp  pusch_decoder_mex.h  pusch_demodulator_mex.cpp  pusch_demodulator_mex.h  pusch_processor_capabilities_mex.cpp
+srsMEX/source/lib/phy/upper/signal_processors/: CMakeLists.txt  multiport_channel_estimator_mex.cpp  multiport_channel_estimator_mex.h
+srsMEX/source/lib/support/: CMakeLists.txt  resource_grid.cpp
+srsMEX/source/unittests/: CMakeLists.txt  srsran_mex_dispatcher_test.cpp
+srsTest/: TestVector.m  copySRStestvectors.m  listSRSblocks.m  srsBlockUnittest.m
+srsTest/+analizers/: srsPRACHAnalizer.m  srsPUSCHAnalizer.m
+srsTest/+helpers/: RBallocationMask2string.m  approxbf16.m  array2str.m  bitPack.m  bitUnpack.m  cell2str.m  cellarray2str.m  indices2REPattern.m  indices2SymbolMask.m  integer2srsBits.m  logical2str.m  matlab2srsCyclicPrefix.m  matlab2srsPUCCHGroupHopping.m  mcsDescription2Cell.m  mustBeResourceGrid.m  randmod.m  rbAllocationIndexes2String.m  readComplexFloatFile.m  symbolAllocationMask2string.m  writeComplexFloatFile.m  writeFloatFile.m  writeInt16File.m  writeInt8File.m  writeResourceGridEntryFile.m  writeUint16File.m  writeUint8File.m
+srsTest/+plugins/: srsDiagnosticsOutputPlugin.m
PUSCHBLER/: HARQEntity.m  PUSCHBLER.m  hSkipWeakTimingOffset.m
apps/PUSCHBLER/: combinePUSCHSims.m
apps/analizers/: srsPRACHAnalizer.m  srsPUSCHAnalizer.m
apps/analyzers/: srsPRACHAnalyzer.m  srsPUCCHAnalyzer.m  srsPUSCHAnalyzer.m  srsParseLogs.m  srsResourceGridAnalyzer.m
apps/tutorials/: srsCSIPlanning.m  srsMUMIMO.m
sourceMex/: .clang-format  CMakeLists.txt
sourceMex/cmake/modules/: FindSRSGNB.cmake
sourceMex/docs/: CMakeLists.txt  main.dox
sourceMex/include/srsgnb_matlab/: srsgnb_mex_dispatcher.h
sourceMex/include/srsgnb_matlab/support/: matlab_to_srs.h  memento.h
sourceMex/include/srsran_matlab/: srsran_mex_dispatcher.h
sourceMex/include/srsran_matlab/support/: matlab_to_srs.h  memento.h
sourceMex/lib/: CMakeLists.txt
sourceMex/lib/phy/: CMakeLists.txt
sourceMex/lib/phy/upper/channel_processors/: CMakeLists.txt  prach_detector_mex.cpp  prach_detector_mex.h  pusch_decoder_mex.cpp  pusch_decoder_mex.h  pusch_demodulator_mex.cpp
sourceMex/unittests/: CMakeLists.txt  srsgnb_mex_dispatcher_test.cpp  srsran_mex_dispatcher_test.cpp
src/phy/: nrPBCHmodulationSymbolsGenerate.m  nr_pbch_modulation_symbols_generate.m
test/helpers/: RBallocationMask2string.m  array2str.m  cell2str.m  cellarray2str.m  convertArrayToString.m  convert_array_to_string.m  generateRBallocationMaskString.m  generateSlotPointConfigString.m  generateSymbolAllocationMaskString.m  symbolAllocationMask2string.m  translateToSimulatorNaming.m  writeComplexFloatFile.m  writeResourceGridEntryFile.m  writeUint8File.m  write_resource_grid_entry_file.m  write_uint8_file.m
test/testvector/: TestVector.m  nrPBCHmodulationSymbolsTestvectorAdd.m  nrPBCHsymbolModulatorTestvectorImpl.m  nr_pbch_modulation_symbols_testvector_add.asv  nr_pbch_modulation_symbols_testvector_add.m  runTestVector.m  runTestvector.m  run_nr_pbch_symbol_modulator_testvector_generation.m  run_testvector.m  testvector.m
test/unittest/: nrPBCHsymbolModulatorUnittest.m  nr_pbch_symbol_modulator_unittest.m
unitTests/: CheckAnalyzers.m  CheckPRACHConformance.m  CheckPUCCHF0Conformance.m  CheckPUCCHF1Conformance.m  CheckPUCCHF2Conformance.m  CheckPUCCHF3Conformance.m  CheckPUCCHF4Conformance.m  CheckPUSCHConformance.m  CheckSimulators.m  CheckTests.m
unitTests/@CheckPUSCHConformance/: CheckPUSCHConformance.m  createFRC.m  createTestConfigCustom.m  createTestConfigTable8_2_1_2_1.m  createTestConfigTable8_2_1_2_2.m  createTestConfigTable8_2_1_2_3.m  createTestConfigTable8_2_1_2_4.m  createTestConfigTable8_2_1_2_5.m  createTestConfigTable8_2_1_2_6.m  createTestConfigTable8_2_1_2_7.m  createTestConfigTable8_2_2_2_x.m
unitTests/overloads/: clipboard.m  input.m  pause.m
(+140 files in other folders)
